--- a/src/pages/blog/033-job-as-a-critique-of-theodicy.mdx
+++ b/src/pages/blog/033-job-as-a-critique-of-theodicy.mdx
@@ -1,52 +1,49 @@
 ---
 layout: '../../layouts/BlogLayout.astro'
-title: 'Job As A Critique of Theodicy'
+title: 'The Book of Job As A Critique of Theodicy'
 description: 'An essay I wrote about Job during my Master of Divinity.'
 image: 'quill'
-pubDate: '2024-05-09'
+pubDate: '2024-05-10'
 series: 'academic writings'
 ---
 
-Could also call it "Job's three friends"
+This is one of the essays I wrote for [a unit on wisdom literature](/blog/012-reading-wisdom-literature) during my theological studies. While there are a number of units/essays that I remember as having had a significant impact on me, this essay stands out for a number of reasons. The first is simply that it reads well and I feel that it covers the topic in sufficient detail (unlike many assignments where the combination of time available and allowed word-count means you have to skim over the surface). The second is that I can still remember the reaction of my class &ndash; lecturer included &ndash; when I first put forward the idea of Job as a critique of theodicy. For these reasons I’ve decided to include this essay here.
 
-Intro...
-
-## Old abstract
-
-This essay explores the theological perspective of Job’s three friends, considers their function in the literary structure of the whole book, and determines whether the friends are a help or a hindrance to the overall message of the book. In doing so it reaches the following conclusions. First, the three friends represent the Ancient Near Eastern retribution principle. Second, within the literary context, they present this view in order for it to be rejected. Lastly, after proposing that the book of Job should be understood as a critique of theodicy, it is argued that the friends’ presentation of the retribution principle is necessary for the book’s purpose to be properly carried out.
+While the original essay question was about the role of Job’s three friends in the book of Job (and this is quite evident throughout the essay), I’ve decided to name the post after the idea that got the reaction from my class instead &ndash; Job as a critique of theodicy. If you don’t know what a ‘theodicy’ is, it’s essentially an answer to the question of ‘How can God be good when there’s so much suffering in the world?’ I personally think that the question of theodicy &ndash; particularly ‘How can God be good when…’ &ndash; is behind a lot of theology, not just for those who believe, but also for those who reject religion.
 
 ---
 
-## Introduction
+## Job as a Critique of Theodicy
 
-The Ancient Near Eastern retribution principle as presented by Job’s friends Eliphaz, Bildad, and Zophar both contradicts and contributes to the message of the book of Job. This essay explores and evaluates this theological perspective, as well as observing its function in the literary structure of the Joban narrative and considering whether it helps or hinders the overall message of the book of Job. In the process it does the following. First, it summarises the conflicting understandings of human suffering that are present in the book of Job. Secondly, it draws attention to the competing claims to wisdom that each party puts forward. Lastly, it identifies the book of Job as a critique of ANE theodicy.
+The Ancient Near Eastern retribution principle as presented by Job’s friends Eliphaz, Bildad, and Zophar both contradicts and contributes to the message of the book of Job. This essay explores and evaluates this theological perspective, as well as observing its function in the literary structure of the Joban narrative and considering whether it helps or hinders the overall message of the book of Job. In the process it does the following. First, it summarises the conflicting understandings of human suffering that are present in the book of Job. Secondly, it draws attention to the competing claims to wisdom that each party puts forward. Lastly, it identifies the book of Job as a critique of ancient near eastern (ANE) theodicy.
 
-## The Theodicy of Job’s Three Friends
+### The Theodicy of Job’s Three Friends
 
 Upon examining the theological perspectives of Job’s three ‘friends’, it quickly becomes evident that each of their views are essentially the same. This observation is verified by Eliphaz speaking as a representative of all three in 5:27 (Gutiérrez, 1987), along with God treating Eliphaz in the same way in 42:7. Consequently, rather than exploring the thought of each friend separately, this part of the essay explores the one theological perspective of the three friends.
 
-Most scholars agree that Job’s friends Eliphaz, Bildad, and Zophar represent the prevailing theodicy of the ANE (Walton, 2012). This theodicy—now known as the ‘retribution principle’—essentially states that God prospers the righteous and punishes the wicked (Ballentine, 2008, p. 324). While the basic tenets of this principle are fairly simple, there are some nuances to the version presented by Job’s friends which we ought to be aware of. First, according to Eliphaz and Bildad, no person nor object is perfect in God’s sight (4:12-21; 15:14-15; 25). Consequently, since imperfection leads to suffering, humanity was “born for trouble” (5:3-7). Secondly, Bildad and Zophar acknowledged that while the retribution principle is true, the wicked do prosper for a short time prior to their destruction (8:11-19; 20:5). Interestingly, they did not seem to allow for the converse possibility that the righteous might suffer for a short time despite their righteousness. Thirdly, Zophar saw the capacity for grace in God, arguing that God did not exact from Job as much as his guilt deserved (11:6b). Lastly, all three guaranteed to Job that if he would acknowledge his sinfulness and repent, then he would be restored to prosperity (5:8-27; 8:3-7; 11:13-20; 22:21ff.; Wilson, 2007).
+Most scholars agree that Job’s friends Eliphaz, Bildad, and Zophar represent the prevailing theodicy of the ANE (Walton, 2012). This theodicy &ndash; now known as the ‘retribution principle’ &ndash; essentially states that God prospers the righteous and punishes the wicked (Ballentine, 2008, p. 324). While the basic tenets of this principle are fairly simple, there are some nuances to the version presented by Job’s friends which we ought to be aware of. First, according to Eliphaz and Bildad, no person nor object is perfect in God’s sight (4:12-21; 15:14-15; 25). Consequently, since imperfection leads to suffering, humanity was “born for trouble” (5:3-7). Secondly, Bildad and Zophar acknowledged that while the retribution principle is true, the wicked do prosper for a short time prior to their destruction (8:11-19; 20:5). Interestingly, they did not seem to allow for the converse possibility that the righteous might suffer for a short time despite their righteousness. Thirdly, Zophar saw the capacity for grace in God, arguing that God did not exact from Job as much as his guilt deserved (11:6b). Lastly, all three guaranteed to Job that if he would acknowledge his sinfulness and repent, then he would be restored to prosperity (5:8-27; 8:3-7; 11:13-20; 22:21ff.; Wilson, 2007).
 
-### Does it Work?
+#### Does it Work?
 
 For Eliphaz, the retribution principle was vital to the ‘fear of God’ (15:4). Since sinfulness was guaranteed to result in suffering, and righteousness would undoubtedly be rewarded, it was easy to find motivation to serve God. Furthermore the certainty of the principle meant that if someone was suffering, it was their fault, and if someone was well off, they deserved it (with the exception of the short-term prosperity of the wicked). So then, when taken at face value, the retribution principle provided both a convenient way of understanding human suffering, and a bountiful source of motivation to divine service.
 
-However, as Job pointed out in his argument, the retribution principle doesn’t hold up under scrutiny. First, it fails to take into account the existence of wicked people who “spend their days in prosperity” and die in peace (21:13). Second, it does not account for the experience of the poor (24:1-12; Gutiérrez, 1987). These two inconsistencies highlight something about the retribution principle—it operates from the perspective of the wealthy, justifying them in their material excess, and condemning the poor and suffering on the basis of their unfortunate circumstances. It does not convincingly address the reality that some are born into privilege, and others to poverty. Neither does it acknowledge that race and gender can deeply affect one’s experience of life. Furthermore, it does not allow for the fact that often the innocent suffer at the hands of the wicked through no fault of their own. Ultimately, as we will see, the book of Job concludes that the retribution principle is not adequate to understand the ways of the only-wise and powerful YHWH.
+However, as Job pointed out in his argument, the retribution principle doesn’t hold up under scrutiny. First, it fails to take into account the existence of wicked people who “spend their days in prosperity” and die in peace (21:13). Second, it does not account for the experience of the poor (24:1-12; Gutiérrez, 1987). These two inconsistencies highlight something about the retribution principle &ndash; it operates from the perspective of the wealthy, justifying them in their material excess, and condemning the poor and suffering on the basis of their unfortunate circumstances. It does not convincingly address the reality that some are born into privilege, and others to poverty. Neither does it acknowledge that race and gender can deeply affect one’s experience of life. Furthermore, it does not allow for the fact that often the innocent suffer at the hands of the wicked through no fault of their own. Ultimately, as we will see, the book of Job concludes that the retribution principle is not adequate to understand the ways of the only-wise and powerful YHWH.
 
-## The Function of Job’s Three Friends
+### The Function of Job’s Three Friends
 
 The literary structure of Job is a highly contested and complex topic. Some scholars argue that large chunks of the book were added at a later date (Steinmann, 1996), while others argue that Job is irreducibly complex, and as such each section is needed for its message to be properly conveyed (Walton, 2012). This essay sides with the latter.
-In context, Job’s friends’ function is to present the retribution principle so that it can be rejected. In order to better understand this part that it plays, it is necessary to step back and examine the wider context. First, in the prologue the adversary argued that Job only obeyed God because he was rewarded for it (1:9-11; 2:4-5). Job’s friends argued the inverse of the adversary; God only caused Job to suffer because of his sin. Job, on the other hand, argued that God set himself against Job for no reason. Leaving chapter 28 for a moment, Elihu, after rebuking Job for justifying himself instead of God, argued that God caused Job to suffer in order to teach him something. In sum, Job’s friends, Job himself, and Elihu all presented competing explanations for the suffering that Job experienced. Then, when God himself spoke, he rebuked Job’s friends, and justified Job. Therefore, while we are also told that Job was wrong to justify himself rather than God, he was right in arguing that he suffered for no reason. Consequently, Job’s friends and Elihu friends spoke wrongly of God. So we see that in the context of the overall literary structure of Job, his friends were set up in order to fall.
 
-## The Overall Message
+In context, Job’s friends’ function is to present the retribution principle so that it can be rejected. In order to better understand this part that it plays, it is necessary to step back and examine the wider context. First, in the prologue the adversary argued that Job only obeyed God because he was rewarded for it (1:9-11; 2:4-5). Job’s friends argued the inverse of the adversary; God only caused Job to suffer because of his sin. Job, on the other hand, argued that God set himself against Job for no reason. Leaving chapter 28 for a moment, Elihu, after rebuking Job for justifying himself instead of God, argued that God caused Job to suffer in order to teach him something. In sum, Job’s friends, Job himself, and Elihu all presented competing explanations for the suffering that Job experienced. Then, when God himself spoke, he rebuked Job’s friends, and justified Job. Therefore, while we are also told that Job was wrong to justify himself rather than God, he was right in arguing that he suffered for no reason. Consequently, Job’s friends and Elihu spoke wrongly of God. So we see that in the context of the overall literary structure of Job, his friends were set up in order to fall.
 
-Interestingly enough, amidst the theological battle about suffering lies a ‘hidden’ question—‘who is wise?’ (Walton, 2012). The adversary thinks God does not know what he is doing, Job’s friends claim to be stewards of ancestral wisdom (8:7-10; 15:10), Job claims to be equally as wise as his friends (12:3), and Elihu argues that it is not the aged but the spiritual that are wise. Furthermore, when God shows up he does not mention suffering at all. Rather, he makes two speeches about his wisdom and power. Turning now to chapter 28, we see that at the heart of the book lies a poem about wisdom. This poem asserts that only God understands wisdom and only he “knows its place” (28:23). Consequently, the role of humanity is to fear the Lord and depart from evil according to God’s word (28:28). This then explains why God did not answer Job’s question about his suffering. Each party was claiming wisdom as their own, and some even claimed to be wiser than God. God’s response was to assert his own wisdom. It seems then that the book of Job provides a critique of theodicy. In the face of suffering, ANE cultures insisted that the gods adhered to the retribution principle. In response, the book of Job declares that God alone is wise and humanity cannot understand his ways.
+### The Overall Message
 
-## A Help or a Hindrance?
+Interestingly enough, amidst the theological battle about suffering lies a ‘hidden’ question &ndash; ‘who is wise?’ (Walton, 2012). The adversary thinks God does not know what he is doing, Job’s friends claim to be stewards of ancestral wisdom (8:7-10; 15:10), Job claims to be equally as wise as his friends (12:3), and Elihu argues that it is not the aged but the spiritual that are wise. Furthermore, when God shows up he does not mention suffering at all. Rather, he makes two speeches about his wisdom and power. Turning now to chapter 28, we see that at the heart of the book lies a poem about wisdom. This poem asserts that only God understands wisdom and only he “knows its place” (28:23). Consequently, the role of humanity is to fear the Lord and depart from evil according to God’s word (28:28). This then explains why God did not answer Job’s question about his suffering. Each party was claiming wisdom as their own, and some even claimed to be wiser than God. God’s response was to assert his own wisdom. It seems then that the book of Job provides a critique of theodicy. In the face of suffering, ANE cultures insisted that the gods adhered to the retribution principle. In response, the book of Job declares that God alone is wise and humanity cannot understand his ways.
 
-So, do Job’s friends help or hinder the overall message of the book? If the book truly is a critique of theodicy, then it is imperative that the mainstream theodicy of the ANE is presented. Consequently, Job’s friends’ theological perspectives are crucial to the agenda of the book, even if they are simply presented in order to be rejected. Without their perspectives, the book could certainly still declare that God alone is wise and that humanity cannot understand him, but it would also lose its polemic edge that would have been clearly apparent in its original context.
+### A Help or a Hindrance?
 
-## Conclusion
+So, do Job’s friends help or hinder the overall message of the book? If the book truly is a critique of theodicy, then it is imperative that the mainstream theodicy of the ANE is presented. Consequently, Job’s friends’ theological perspectives are crucial to the agenda of the book, even if they are simply presented in order to be rejected. Without their perspectives, the book could certainly still declare that God alone is wise and that humanity cannot understand him, but it would lose its polemic edge that would have been clearly apparent in its original context.
+
+### Conclusion
 
 In sum, Job’s three friends all believed in a nuanced form of the ANE retribution principle. Their function within the literary structure was to present this prevalent view so that it could be rejected. In fact, the book as a whole appears to be a critique of this theodicy, emphasising God’s wisdom rather than seeking to answer the question of human suffering. Consequently, the friends’ discourses were crucial to the agenda of the book, as it is necessary for a view to be presented before it can be critiqued. It is the presence of the friends’ argument, then, that gives the book its polemic edge which would have been self-evident in its original context.
 
